# yandexPracticumBackendCpp

./: .gitignore  README.md  prepare_test.sh  requirements.txt
sprint1/: README.md
sprint1/problems/map_json/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint1/problems/map_json/solution/src/: http_server.h  json_converter.cpp  json_converter.h  json_loader.cpp  main.cpp  request_handler.h  responce_storage.cpp  responce_storage.h  responder.h  response_command_chain.h
sprint1/problems/radio/precode/: CMakeLists.txt
sprint1/problems/restaurant_multi_threaded/precode/: CMakeLists.txt
sprint1/problems/restaurant_multi_threaded/precode/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  README.md  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/logger/solution/: CMakeLists.txt  main.cpp  my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  main.cpp  model.cpp  request_handler.h
sprint2/problems/server_logging/solution/src/json/: json_converter.cpp  json_key_storage.h  json_loader.cpp
sprint2/problems/server_logging/solution/src/logging/: logger.cpp  logger.h  logging_data_storage.h
sprint2/problems/server_logging/solution/src/model/: model.cpp  model.h  model_key_storage.h  tagged.h
sprint2/problems/server_logging/solution/src/request_handlers/: api_v1_request_handlers_executor.h  api_v1_request_handlers_storage.h  request_handler_node.h  static_file_request_handlers_executor.h
sprint2/problems/server_logging/solution/src/response_storage/: api_v1_responce_storage.cpp  static_file_response_storage.cpp  static_file_response_storage.h
sprint2/problems/server_logging/solution/static/: load_simulator.html
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: http_server.cpp
sprint2/problems/time_control/solution/src/app/: application.cpp  application.h
sprint2/problems/time_control/solution/src/json/: json_converter.cpp  json_converter.h  json_key_storage.h  json_loader.cpp
sprint2/problems/time_control/solution/src/model/: dog.cpp  dog.h  game_session.cpp  game_session.h  map.cpp  map.h  player.cpp  player.h  roadmap.cpp  roadmap.h  support_types.h
sprint2/problems/time_control/solution/src/request_handlers/: api_v1_request_handlers_executor.h  api_v1_request_handlers_storage.h  static_file_request_handlers_storage.h
sprint2/problems/time_control/solution/src/utils/: random_generators.cpp  request_handlers_utils.h
sprint3/problems/gather-tests/precode/: CMakeLists.txt
sprint3/problems/gather-tests/precode/src/: collision_detector.cpp
sprint3/problems/gather-tests/precode/tests/: collision-detector-tests.cpp
sprint3/problems/gather-tests/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/gather-tests/solution/src/: collision_detector.cpp  collision_detector.h
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/app/: application.cpp  application.h  game_session.cpp  game_session.h  player.cpp  player.h
sprint3/problems/gen_objects/solution/src/authentication/: player_tokens.h
sprint3/problems/gen_objects/solution/src/json/: json_converter.cpp  json_converter.h  json_key_storage.h  json_loader.cpp  json_model_converter.cpp  json_model_converter.h
sprint3/problems/gen_objects/solution/src/model/: building.cpp  building.h  game.cpp  game.h  loot_generator.cpp  loot_generator.h  loot_type.h  lost_object.h  map.cpp  map.h  model_key_storage.h  road.h  support_types.h
sprint3/problems/gen_objects/solution/src/request_handlers/: api_url_storage.h  api_v1_request_handlers_executor.h  api_v1_request_handlers_storage.h
sprint3/problems/gen_objects/solution/src/utils/: random_generators.cpp
sprint3/problems/htmldecode/precode/: CMakeLists.txt  conanfile.txt
sprint3/problems/htmldecode/precode/src/: htmldecode.cpp  htmldecode.h
sprint3/problems/htmldecode/precode/tests/: tests.cpp
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: main.cpp
sprint3/problems/scores/solution/tests/: collision-detector-tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/tv/precode/: CMakeLists.txt  conanfile.txt
sprint3/problems/tv/precode/src/: controller.h  menu.h  tv.h
sprint3/problems/tv/precode/tests/: boost_tv_tests.cpp  catch_tv_tests.cpp  google_tv_tests.cpp
sprint3/problems/urldecode/precode/: CMakeLists.txt  conanfile.txt
sprint3/problems/urldecode/precode/src/: main.cpp  urldecode.cpp
sprint3/problems/urldecode/precode/tests/: tests.cpp
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/src/: urldecode.cpp  urldecode.h
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/precode/: CMakeLists.txt
sprint3/problems/urlencode/precode/src/: urlencode.cpp
sprint3/problems/urlencode/precode/tests/: tests.cpp
sprint4/problems/bookypedia-1/precode/: CMakeLists.txt
sprint4/problems/bookypedia-1/precode/src/: author.cpp  author.h  bookypedia.h  main.cpp  menu.h  postgres.cpp  postgres.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h  view.cpp  view.h
sprint4/problems/bookypedia-1/precode/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: db_functions.cpp  db_functions.h  json_keys.h  main.cpp  middleware.cpp  middleware.h  model.cpp  model.h
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: main.cpp
sprint4/problems/state_serialization/precode/: CMakeLists.txt  README.md
sprint4/problems/state_serialization/precode/src/: model.cpp  model.h  model_serialization.h
sprint4/problems/state_serialization/precode/tests/: state-serialization-tests.cpp
(+446 files in other folders)
